@@ -6,7 +6,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import sgc.alerta.dto.AlertaDto;
 import sgc.alerta.dto.AlertaMapper;
-import sgc.alerta.erros.ErroAlteracaoAlerta;
+import sgc.alerta.erros.ErroAlerta;
 import sgc.alerta.model.*;
 import sgc.comum.erros.ErroEntidadeNaoEncontrada;
 import sgc.processo.model.Processo;
@@ -41,7 +41,7 @@ public class AlertaService {
     private final AlertaRepo repositorioAlerta;
     private final AlertaUsuarioRepo alertaUsuarioRepo;
     private final UnidadeRepo unidadeRepo;
-    private final SgrhService servicoSgrh;
+    private final SgrhService sgrhService;
     private final UsuarioRepo usuarioRepo;
     private final AlertaMapper alertaMapper;
 
@@ -74,32 +74,26 @@ public class AlertaService {
         Unidade unidadeDestino = unidadeRepo.findById(codUnidadeDestino)
                 .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Unidade", codUnidadeDestino));
 
-        Alerta alerta = new Alerta();
-        alerta.setProcesso(processo);
-        alerta.setDataHora(LocalDateTime.now());
-        alerta.setUnidadeOrigem(null); // SEDOC não tem registro como unidade
-        alerta.setUnidadeDestino(unidadeDestino);
-        alerta.setDescricao(descricao);
+        Alerta alerta = new Alerta()
+                .setProcesso(processo)
+                .setDataHora(LocalDateTime.now())
+                .setUnidadeOrigem(null) // SEDOC não tem registro como unidade
+                .setUnidadeDestino(unidadeDestino)
+                .setDescricao(descricao);
 
         Alerta alertaSalvo = repositorioAlerta.save(alerta);
-        log.info("Alerta criado: código={}, tipo={}, unidade={}",
-                alertaSalvo.getCodigo(), tipoAlerta, unidadeDestino.getNome());
-
-        // Buscar responsável da unidade via SGRH
         try {
-            Optional<ResponsavelDto> responsavel = servicoSgrh.buscarResponsavelUnidade(codUnidadeDestino);
+            Optional<ResponsavelDto> responsavel = sgrhService.buscarResponsavelUnidade(codUnidadeDestino);
             if (responsavel.isPresent() && responsavel.get().titularTitulo() != null) {
                 criarAlertaUsuario(alertaSalvo, responsavel.get().titularTitulo(), codUnidadeDestino);
+
                 // Se houver substituto, também o adiciona
                 if (responsavel.get().substitutoTitulo() != null) {
                     criarAlertaUsuario(alertaSalvo, responsavel.get().substitutoTitulo(), codUnidadeDestino);
                 }
-            } else {
-                log.warn("Responsável não encontrado para a unidade.");
             }
         } catch (Exception e) {
-            log.error("Erro ao buscar responsável da unidade {}: {}", codUnidadeDestino, e.getClass().getSimpleName(), e);
-            // Não interrompe o fluxo se não conseguir buscar o responsável
+            log.warn("Erro ao buscar responsável da unidade {} no SGRH. Alerta criado sem associação de usuário: {}", codUnidadeDestino, e.getMessage());
         }
         return alertaSalvo;
     }
@@ -130,17 +124,16 @@ public class AlertaService {
             List<Subprocesso> subprocessos) {
 
         log.info("Criando alertas para processo iniciado: {} unidades", codigosUnidades.size());
-        List<Alerta> alertasCriados = new ArrayList<>();
 
+        List<Alerta> alertasCriados = new ArrayList<>();
         for (Long codUnidade : codigosUnidades) {
             try {
                 // Buscar tipo da unidade via SGRH
-                Optional<UnidadeDto> unidadeDtoOptional = servicoSgrh.buscarUnidadePorCodigo(codUnidade);
+                Optional<UnidadeDto> unidadeDtoOptional = sgrhService.buscarUnidadePorCodigo(codUnidade);
                 if (unidadeDtoOptional.isEmpty()) {
                     log.warn("Unidade não encontrada no SGRH: {}", codUnidade);
                     continue;
                 }
-
                 TipoUnidade tipoUnidade = TipoUnidade.valueOf(unidadeDtoOptional.get().tipo());
                 String nomeProcesso = processo.getDescricao();
 
@@ -152,65 +145,37 @@ public class AlertaService {
                         .orElse(processo.getDataLimite()); // Fallback para a data limite do processo se não encontrar subprocesso
 
                 // Criar alertas baseados no tipo de unidade
-                if (TipoUnidade.OPERACIONAL.equals(tipoUnidade)) {
-                    String descricao = String.format(
-                            "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
+                switch (tipoUnidade) {
+                    case OPERACIONAL -> {
+                        String desc = "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_OPERACIONAL, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alerta);
+                    }
+                    case INTERMEDIARIA -> {
+                        String desc = "Início do processo '%s' em unidade(s) subordinada(s). Aguarde a disponibilização dos mapas para validação até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_INTERMEDIARIA, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alerta);
+                    }
+                    case INTEROPERACIONAL -> {
+                        String desc = "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alertaOperacional = criarAlerta(processo, PROCESSO_INICIADO_INTEROPERACIONAL_OP, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alertaOperacional);
 
-                    Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_OPERACIONAL, codUnidade, descricao, dataLimite);
-                    alertasCriados.add(alerta);
+                        String descIntermediaria = "Início do processo '%s' em unidade(s) subordinada(s). Aguarde a disponibilização dos mapas para validação até %s."
+                                .formatted(nomeProcesso, fmtData(dataLimite));
 
-                } else if (TipoUnidade.INTERMEDIARIA.equals(tipoUnidade)) {
-                    String descricao = String.format(
-                            "Início do processo '%s' em unidade(s) subordinada(s). " +
-                                    "Aguarde a disponibilização dos mapas para validação até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
+                        Alerta alertaIntermediaria = criarAlerta(processo,
+                                PROCESSO_INICIADO_INTEROPERACIONAL_INT,
+                                codUnidade,
+                                descIntermediaria,
+                                dataLimite);
 
-                    Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_INTERMEDIARIA, codUnidade, descricao, dataLimite);
-                    alertasCriados.add(alerta);
-
-                } else if (TipoUnidade.INTEROPERACIONAL.equals(tipoUnidade)) {
-                    String descOperacional = String.format(
-                            "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
-                    log.debug("Descrição para PROCESSO_INICIADO_INTEROPERACIONAL_OP: {}", descOperacional);
-                    Alerta alertaOperacional = criarAlerta(processo,
-                            PROCESSO_INICIADO_INTEROPERACIONAL_OP,
-                            codUnidade,
-                            descOperacional,
-                            dataLimite);
-
-                    alertasCriados.add(alertaOperacional);
-
-                    String descIntermediaria = String.format(
-                            "Início do processo '%s' em unidade(s) subordinada(s). " +
-                                    "Aguarde a disponibilização dos mapas para validação até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
-                    log.debug("Descrição para PROCESSO_INICIADO_INTEROPERACIONAL_INT: {}", descIntermediaria);
-
-                    Alerta alertaIntermediaria = criarAlerta(processo,
-                            PROCESSO_INICIADO_INTEROPERACIONAL_INT,
-                            codUnidade,
-                            descIntermediaria,
-                            dataLimite);
-
-                    alertasCriados.add(alertaIntermediaria);
-
-                } else {
-                    log.warn("Tipo de unidade desconhecido: {} (unidade={})", tipoUnidade, codUnidade);
+                        alertasCriados.add(alertaIntermediaria);
+                    }
                 }
             } catch (Exception e) {
                 log.error("Erro ao criar alerta para a unidade {}: {}", codUnidade, e.getClass().getSimpleName(), e);
-                throw new ErroAlteracaoAlerta(
-                    "Falha ao criar alerta para a unidade " + codUnidade + ": " + e.getMessage(), e);
+                throw new ErroAlerta("Falha ao criar alerta para a unidade %d: %s".formatted(codUnidade, e.getMessage()), e);
             }
         }
 
@@ -256,39 +221,33 @@ public class AlertaService {
      * informando o motivo da devolução e solicitando que os ajustes necessários
      * sejam realizados.
      *
-     * @param processo             O processo ao qual o cadastro pertence.
-     * @param codigoUnidadeDestino O código da unidade que precisa ajustar o cadastro.
-     * @param motivo               A descrição do motivo pelo qual o cadastro foi devolvido.
+     * @param processo          O processo ao qual o cadastro pertence.
+     * @param codUnidadeDestino O código da unidade que precisa ajustar o cadastro.
+     * @param motivo            A descrição do motivo pelo qual o cadastro foi devolvido.
      * @return O {@link Alerta} criado.
      */
     @Transactional
-    public Alerta criarAlertaCadastroDevolvido(
-            Processo processo,
-            Long codigoUnidadeDestino,
-            String motivo) {
+    public Alerta criarAlertaCadastroDevolvido(Processo processo, Long codUnidadeDestino, String motivo) {
+        String desc = "Cadastro devolvido no processo '%s'. Motivo: %s. Realize os ajustes necessários e disponibilize novamente."
+                .formatted(processo.getDescricao(), motivo);
 
-        String descricao = String.format(
-                "Cadastro devolvido no processo '%s'. Motivo: %s. Realize os ajustes necessários e disponibilize novamente.",
-                processo.getDescricao(),
-                motivo
-        );
-
-        return criarAlerta(processo, TipoAlerta.CADASTRO_DEVOLVIDO, codigoUnidadeDestino, descricao, null);
+        return criarAlerta(processo, TipoAlerta.CADASTRO_DEVOLVIDO, codUnidadeDestino, desc, null);
     }
 
     private void criarAlertaUsuario(Alerta alerta, String tituloStr, Long codUnidade) {
         try {
-            Long titulo = Long.parseLong(tituloStr);
+            String titulo = tituloStr;
             Usuario usuario = usuarioRepo.findById(titulo)
                     .orElseGet(() -> {
-                        log.info("Usuário {} não encontrado no banco de dados. Buscando no SGRH...", titulo);
-                        return servicoSgrh.buscarUsuarioPorTitulo(tituloStr)
+                        log.info("Usuário {} não encontrado no banco de dados. Buscando no SGRH.", titulo);
+                        return sgrhService.buscarUsuarioPorTitulo(tituloStr)
                                 .map(usuarioDto -> {
-                                    Usuario novoUsuario = new Usuario();
-                                    novoUsuario.setTituloEleitoral(Long.parseLong(usuarioDto.titulo()));
-                                    novoUsuario.setNome(usuarioDto.nome());
-                                    novoUsuario.setEmail(usuarioDto.email());
-                                    novoUsuario.setPerfis(java.util.Set.of(Perfil.CHEFE)); // Default role
+                                    Usuario novoUsuario = new Usuario()
+                                            .setTituloEleitoral(usuarioDto.titulo())
+                                            .setNome(usuarioDto.nome())
+                                            .setEmail(usuarioDto.email())
+                                            .setPerfis(java.util.Set.of(Perfil.CHEFE));
+
                                     unidadeRepo.findById(codUnidade).ifPresent(novoUsuario::setUnidade);
                                     return novoUsuario;
                                 })
@@ -309,7 +268,7 @@ public class AlertaService {
         }
     }
 
-    private String formatarData(LocalDateTime data) {
+    private String fmtData(LocalDateTime data) {
         return data != null
                 ? String.format("%02d/%02d/%d", data.getDayOfMonth(), data.getMonthValue(), data.getYear())
                 : "Data não definida";
@@ -327,14 +286,15 @@ public class AlertaService {
      * @param usuarioTituloStr O título de eleitor do usuário (em formato String).
      * @param alertaId         O código do alerta a ser marcado como lido.
      * @throws ErroEntidadeNaoEncontrada se a associação entre o alerta e o usuário não for encontrada.
-     * @throws NumberFormatException se o {@code usuarioTituloStr} não for um número válido.
+     * @throws NumberFormatException     se o {@code usuarioTituloStr} não for um número válido.
      */
     @Transactional
     public void marcarComoLido(String usuarioTituloStr, Long alertaId) {
-        Long usuarioTitulo = Long.parseLong(usuarioTituloStr);
+        String usuarioTitulo = usuarioTituloStr;
+
         AlertaUsuario.Chave id = new AlertaUsuario.Chave(alertaId, usuarioTitulo);
         AlertaUsuario alertaUsuario = alertaUsuarioRepo.findById(id).orElseThrow(() -> new ErroEntidadeNaoEncontrada(
-                "Não foi encontrado o alerta %d para o usuário %d".formatted(alertaId, usuarioTitulo))
+                "Não foi encontrado o alerta %d para o usuário %s".formatted(alertaId, usuarioTitulo))
         );
 
         if (alertaUsuario.getDataHoraLeitura() == null) {
@@ -352,24 +312,25 @@ public class AlertaService {
      */
     @Transactional(readOnly = true)
     public List<AlertaDto> listarAlertasPorUsuario(String usuarioTituloStr) {
-        Long usuarioTitulo = Long.parseLong(usuarioTituloStr);
+        String usuarioTitulo = usuarioTituloStr;
         List<AlertaUsuario> alertasUsuario = alertaUsuarioRepo.findById_UsuarioTituloEleitoral(usuarioTitulo);
 
         return alertasUsuario.stream()
-            .map(alertaUsuario -> {
-                Alerta alerta = alertaUsuario.getAlerta();
-                AlertaDto dto = alertaMapper.toDto(alerta);
-                // Adicionar a data de leitura específica do usuário ao DTO
-                return AlertaDto.builder()
-                    .codigo(dto.getCodigo())
-                    .codProcesso(dto.getCodProcesso())
-                    .unidadeOrigem(dto.getUnidadeOrigem())
-                    .unidadeDestino(dto.getUnidadeDestino())
-                    .descricao(dto.getDescricao())
-                    .dataHora(dto.getDataHora())
-                    .dataHoraLeitura(alertaUsuario.getDataHoraLeitura())
-                    .build();
-            })
-            .toList();
+                .map(alertaUsuario -> {
+                    Alerta alerta = alertaUsuario.getAlerta();
+                    AlertaDto dto = alertaMapper.toDto(alerta);
+
+                    // Adicionar a data de leitura específica do usuário ao DTO
+                    return AlertaDto.builder()
+                            .codigo(dto.getCodigo())
+                            .codProcesso(dto.getCodProcesso())
+                            .unidadeOrigem(dto.getUnidadeOrigem())
+                            .unidadeDestino(dto.getUnidadeDestino())
+                            .descricao(dto.getDescricao())
+                            .dataHora(dto.getDataHora())
+                            .dataHoraLeitura(alertaUsuario.getDataHoraLeitura())
+                            .build();
+                })
+                .toList();
     }
 }
